--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -29,6 +29,7 @@
   --global-danger-block-bg: #ffe0e0;
   --global-danger-block-text: #600;
   --global-danger-block-title: #c00;
+  --global-research-section-border: rgba(0, 0, 0, 0.1);
 
   .fa-sun {
     display : none;
@@ -74,6 +75,8 @@ html[data-theme='dark'] {
   --global-danger-block-bg: #ffe0e0;
   --global-danger-block-text: #600;
   --global-danger-block-title: #c00;
+
+  --global-research-section-border: rgba(255, 255, 255, 0.3);
 
   .fa-sun {
     padding-left: 10px;
